Mon Mar  3 23:36:41 2008  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpservlet/filehandler.rb: should normalize path
	  separators in path_info to prevent directory traversal attacks
	  on DOSISH platforms.
	  reported by Digital Security Research Group [DSECRG-08-026].

	* lib/webrick/httpservlet/filehandler.rb: pathnames which have
	  not to be published should be checked case-insensitively.

Sun Sep 23 21:57:25 2007  GOTOU Yuuzou  <gotoyuzo@notwork.org>  

	* lib/net/http.rb: an SSL verification (the server hostname should
	  be matched with its certificate's commonName) is added.
	  this verification can be skipped by
	  "Net::HTTP#enable_post_connection_check=(false)".
	  suggested by Chris Clark <cclark at isecpartners.com>

	* lib/net/open-uri.rb: use Net::HTTP#enable_post_connection_check to
	  perform SSL post connection check.

	* ext/openssl/lib/openssl/ssl.c
	(OpenSSL::SSL::SSLSocket#post_connection_check): refine error message.

Sun Sep 23 06:08:38 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_init): separate from strio_initialize
	  to share with strio_reopen properly.  [ruby-Bugs-13919]

Sun Sep 23 05:42:35 2007  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/rdoc/options.rb (Options::check_diagram): dot -V output
	  changed. [ ruby-Bugs-11978 ], Thanks Florian Frank.

Mon Sep 17 04:47:02 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (proc_options): -W should be allowed in RUBYOPT
	  environment variable.  [ruby-core:12118]

Mon Sep 17 04:31:46 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* range.c (range_step): fixed integer overflow.  [ruby-dev:31763]

Fri Sep  7 14:57:36 2007  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* ruby.c (rubylib_mangled_path): eliminate RSTRING_PTR
	  [ruby-dev:31679]

	* ruby.c(push_include_cygwin): ditto.

Fri Sep  7 14:32:38 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_subseq): need integer overflow check.
	  [ruby-dev:31736]
