@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.5"
-#define RUBY_RELEASE_DATE "2008-03-03"
+#define RUBY_RELEASE_DATE "2008-05-17"
 #define RUBY_VERSION_CODE 185
-#define RUBY_RELEASE_CODE 20080303
+#define RUBY_RELEASE_CODE 20080517
 #define RUBY_PATCHLEVEL 115
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 5
 #define RUBY_RELEASE_YEAR 2008
-#define RUBY_RELEASE_MONTH 3
-#define RUBY_RELEASE_DAY 3
+#define RUBY_RELEASE_MONTH 5
+#define RUBY_RELEASE_DAY 17
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
